jEdit 5.5 version history
       (changes since jEdit 5.4.0)
:encoding=UTF-8:

{{{ Version 5.5pre1

Thanks to AdamS, Wim West, M. Cesar R. Lacruz, Egor Abramovich,
Hrotkó Gábor, and Alan Ezust for contributing to this release.

{{{ Bug Fixes

- command line behavior for +line fixed (Patch #590 - Wim West)

- Autosave Untitled Buffers fixed (Patch #596 - Hrotkó Gábor)

}}}
{{{ UI Improvements


}}}
{{{ Miscellaneous

- Removed Saving and Backup option, "Never mark untitled buffers dirty"
  because it has been replaced by "Autosave untitled buffers". (Alan Ezust)

}}}
{{{ API Changes


}}}
{{{ Editing

- Patch #593 - Various small patches to modes (AdamS)

- Patch #592 - for groovy mode (Egor Abramovich)

- Patch #595 - New Assembly-arm32 edit mode (M. Cesar R. Lacruz)

}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: